feat(book-detail): completed UX/UI of book detail with mock data